# Curves3D

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Curve3D/: Circle.cpp  Circle.h  Curve3D.h  Ellipse.cpp  Ellipse.h  Helixe3D.cpp  Helixe3D.h
