cmake_minimum_required(VERSION 3.20)
project(3DCurves)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(LIBRARY_NAME 3DCurvesLibraryDynamic)
set(MY_DIR Curve3D)
add_library(${LIBRARY_NAME} SHARED ${MY_DIR}/Circle.cpp ${MY_DIR}/Ellipse.cpp ${MY_DIR}/Helixe3D.cpp)
target_include_directories(${LIBRARY_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/${MY_DIR})
add_executable(${PROJECT_NAME} main.cpp ${MY_DIR}/Circle.cpp ${MY_DIR}/Ellipse.cpp ${MY_DIR}/Helixe3D.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/${MY_DIR})
target_link_libraries(${PROJECT_NAME})